fixed a bug where output is shown without inputting the value

--- a/temperature-converter/index.html
+++ b/temperature-converter/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Temperature converter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="content">
         <h3>Temperature Converter</h3>
-        <input type="number" id="mainInput" placeholder="            Enter your input">
+        <input type="number" id="mainInput" placeholder="            Enter your input" required>
         <br>
         <input type="radio" name="temp" id="celsius">
         <label for="celsius">Fahrenheit to Celsius</label>
