--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="hero">
         <div class="leftHero">
-            <img src="pic.avif" alt="" height="460px" width="auto">
+            <img src="IMG/pic.avif" alt="" height="460px" width="auto">
         </div>
         <div class="rightHero">
             <h1>hi i'm anand.
@@ -61,12 +61,12 @@ Currently, I’m strengthening my foundations in programming, data structures, a
         <div class="socials">
         <div class="linkedin">
             <a href="https://www.linkedin.com/in/anand-pr-a678473b2/" target="_blank">
-            <img src="linkedin.webp" href="https://www.linkedin.com/in/anand-pr-a678473b2/" alt="" height="250px" width="auto">
+            <img src="IMG/linkedin.webp" href="https://www.linkedin.com/in/anand-pr-a678473b2/" alt="" height="250px" width="auto">
             Connect on Linkedin</a>
         </div>
         <div class="github">
             <a href="https://github.com/aan4ndd" target="_blank">
-            <img src="github.jpg" alt="" height="250px" width="auto">
+            <img src="IMG/github.jpg" alt="" height="250px" width="auto">
             Check out my GitHub</a>
         </div>
         </div>
